--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,12 +95,33 @@ commands:
           name: Build Docker Image
           command: docker build -f Dockerfile -t ${DOCKER_IMAGE}:${CIRCLE_SHA1} --build-arg VERSION=${VERSION} --build-arg CIRCLE_BUILD_URL=${CIRCLE_BUILD_URL} --build-arg CIRCLE_SHA1=${CIRCLE_SHA1} --build-arg CIRCLE_USERNAME=${CIRCLE_USERNAME} --build-arg CIRCLE_BUILD_NUM=${CIRCLE_BUILD_NUM} .
 
+  enable-docker-experimental:
+    description: "Enables Experimental Features in Docker"
+    steps:
+      - run:
+          name: "Enable Experimental Feature in Docker"
+          command: |
+            mkdir -p $HOME/.docker
+            echo $'{\n    "experimental": true\n}' | sudo tee /etc/docker/daemon.json
+            echo $'{\n    "experimental": "enabled"\n}' | sudo tee $HOME/.docker/config.json
+            sudo service docker restart
 
 executors:
   browsers-python:
     docker:
       - image: cimg/python:3.9-browsers
+  
+  arm64:
+    machine:
+      image: ubuntu-2204:current
+      docker_layer_caching: true
+    resource_class: arm.medium
 
+  amd64:
+    machine:
+      image: ubuntu-2204:current
+      docker_layer_caching: true
+    resource_class: medium
 
 jobs:
   test-demo:
@@ -118,10 +139,10 @@ jobs:
           pytest-args: "--live-server-port 8080 --verbose --junitxml=test-results/junit.xml"
       
   build-image:
-    machine:
-      image: ubuntu-2204:current
-      docker_layer_caching: true
-    resource_class: large
+    parameters:
+      architecture:
+        type: executor
+    executor: << parameters.architecture >>
     steps:
       - checkout
       - build
@@ -130,8 +151,10 @@ jobs:
       DOCKER_IMAGE: multi-arch-circleci-demo
 
   test-image:
-    machine:
-      image: ubuntu-2204:current
+    parameters:
+      architecture:
+        type: executor
+    executor: << parameters.architecture >>
     steps:
       - checkout
       - load-docker-image
@@ -141,8 +164,10 @@ jobs:
       GOSS_SLEEP: 10
 
   publish-image:
-    machine:
-      image: ubuntu-2204:current
+    parameters:
+      architecture:
+        type: executor
+    executor: << parameters.architecture >>
     steps:
       - checkout
       - load-docker-image
@@ -155,13 +180,48 @@ jobs:
       - run:
           name: "Tag Image to be pushed to ECR"
           command: |
-            docker tag ${DOCKER_IMAGE}:${CIRCLE_SHA1} public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:${CIRCLE_SHA1}
-            docker tag ${DOCKER_IMAGE}:${CIRCLE_SHA1} public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:latest
+            docker tag ${DOCKER_IMAGE}:${CIRCLE_SHA1} public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:${CIRCLE_SHA1}-$(docker version -f {{.Server.Arch}})
+            docker tag ${DOCKER_IMAGE}:${CIRCLE_SHA1} public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:latest-$(docker version -f {{.Server.Arch}})
             docker images
       - aws-ecr/push_image:
           repo: ${ECR_REPO}
           public_registry: true
-          tag: latest,${CIRCLE_SHA1}
+          tag: latest-$(docker version -f {{.Server.Arch}}),${CIRCLE_SHA1}-$(docker version -f {{.Server.Arch}})
+    environment:
+      DOCKER_IMAGE: multi-arch-circleci-demo
+      ECR_REPO: ambassador
+
+  publish-manifest:
+    executor: amd64
+    steps:
+      - enable-docker-experimental
+      - aws-cli/setup:
+          profile_name: default
+          role_arn: arn:aws:iam::916929119617:role/ambassador
+          role_session_name: example-session
+      - aws-ecr/ecr_login:
+          public_registry: true
+      - run:
+          name: "Pull down arm64 & amd64 images"
+          command: |
+            docker pull public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:${CIRCLE_SHA1}-arm64
+            docker pull public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:latest-arm64
+            docker pull public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:${CIRCLE_SHA1}-amd64
+            docker pull public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:latest-arm64
+      - run:
+          name: "Create and Publish Manifest for CircleCI SHA"
+          command: |
+            docker manifest create public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:${CIRCLE_SHA1} public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:${CIRCLE_SHA1}-arm64 public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:${CIRCLE_SHA1}-amd64
+            docker manifest annotate public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:${CIRCLE_SHA1} public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:${CIRCLE_SHA1}-arm64 --arch arm64
+            docker manifest annotate public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:${CIRCLE_SHA1} public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:${CIRCLE_SHA1}-amd64 --arch amd64
+            docker manifest push public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:${CIRCLE_SHA1}
+      - run:
+          name: "Create and Publish Manifest for latest"
+          command: |
+            docker manifest create public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:latest public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:latest-arm64 public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:latest-amd64
+            docker manifest annotate public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:latest public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:latest-arm64 --arch arm64
+            docker manifest annotate public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:latest public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:latest-amd64 --arch amd64
+            docker manifest push public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/${ECR_REPO}:latest
     environment:
       DOCKER_IMAGE: multi-arch-circleci-demo
       ECR_REPO: ambassador
@@ -173,16 +233,30 @@ workflows:
       - test-demo:
           name: "Testing Python Code"
       - build-image:
-          name: "Building Container Image"
+          name: "Building << matrix.architecture >> Container Image"
+          matrix:
+            parameters:
+              architecture: ["arm64", "amd64"]
       - test-image:
-          name: "Testing Container Image"
+          name: "Testing << matrix.architecture >> Container Image"
+          matrix:
+            parameters:
+              architecture: ["arm64", "amd64"]
           requires:
-            - "Building Container Image"
+            - "Building << matrix.architecture >> Container Image"
       - publish-image:
-          name: "Publish Container Image to ECR"
+          name: "Publish << matrix.architecture >> Container Image to ECR"
+          matrix:
+            parameters:
+              architecture: ["arm64", "amd64"]
           requires:
+            - "Testing << matrix.architecture >> Container Image"
             - "Testing Python Code"
-            - "Testing Container Image"
+      - publish-manifest:
+          name: "Publish Manifest to ECR"
+          requires:
+            - "Publish arm64 Container Image to ECR"
+            - "Publish amd64 Container Image to ECR"
       - aws-ecs/deploy_service_update:
           auth:
             - aws-cli/setup:
@@ -195,4 +269,4 @@ workflows:
           service_name: ambassador-amd
           profile_name: default
           requires:
-            - "Publish Container Image to ECR"
+            - "Publish Manifest to ECR"
