--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -279,7 +279,7 @@ workflows:
           cluster: ambassador
           container_image_name_updates: container=ambassador-arm,image-and-tag=public.ecr.aws/${AWS_ECR_PUBLIC_REGISTRY_ALIAS}/ambassador:${CIRCLE_SHA1}
           family: ambassador-arm
-          service_name: ambassador-arm
+          service_name: ambassador-lab1-arm
           profile_name: default
           requires:
             - "Publish Manifest to ECR"
